--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,9 @@
     <div><b>Crossword Tracker</b></div>
     <hr/>
     <input type="checkbox" id="tracking-enabled"></input>
-    <label for="track">Enable tracking</label>
+    <label for="tracking-enabled">Enable tracking</label>
+    <button id="log-events">Log events to console</button>
+    <button id="save-events">Save events as JSON file</button>
     <script src="popup.js"></script>
   </body>
 </html>
