--- a/popup.html
+++ b/popup.html
@@ -11,8 +11,8 @@
     <hr/>
     <input type="checkbox" id="tracking-enabled"></input>
     <label for="tracking-enabled">Enable tracking</label>
-    <button id="log-events">Log events to console</button>
-    <button id="save-events">Save events as JSON file</button>
+    <button id="log-record">Log record to console</button>
+    <button id="save-record">Save record as JSON file</button>
     <script src="popup.js"></script>
   </body>
 </html>
