--- a/popup.html
+++ b/popup.html
@@ -12,6 +12,8 @@
     <input type="checkbox" id="tracking-enabled"></input>
     <label for="tracking-enabled">Enable tracking</label>
     <button id="log-record">Log record to console</button>
+    <button id="store-record">Write record to Chrome storage</button>
+    <button id="clear-stored-record">Clear record from Chrome storage</button>
     <button id="save-record">Save record as JSON file</button>
     <script src="popup.js"></script>
   </body>
