Add handling for navigation away/to page (partly done)
When navigating away from a puzzle, add a stop event if necessary and
store the record on the spot. When completing a puzzle successfully,
store the record. Add a little check to make sure that we don't
re-record fill we made on a previous solve, not the most robust but it
seems to work.

Code's kind of messy but I'll reorganize it later.

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
     <label for="tracking-enabled">Enable tracking</label>
     <button id="log-record">Log record to console</button>
     <button id="store-record">Write record to Chrome storage</button>
-    <button id="clear-stored-record">Clear record from Chrome storage</button>
+    <button id="clear-record">Clear record</button>
     <button id="save-record">Save record as JSON file</button>
     <script src="popup.js"></script>
   </body>
