Revamp browser storage of records
Use sync, not local, for puzzle records.

Handle potential runtime.lastError when storing or clearing records, and
respond true/false depending on whether the storage action was
successful.

Add a status bar to the popup screen, and add some callbacks so that
when you take one of the actions there, it will update the status bar
with what happened.

Remove unnecessary activeTab permission, clarify wording re "Download
record", remove stale CSS reference, inline functionality in the service
worker into the callback.

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="button.css">
     <style type="text/css">
       body { width: 250px; }
     </style>
@@ -14,7 +13,9 @@
     <button id="log-record">Log record to console</button>
     <button id="store-record">Write record to Chrome storage</button>
     <button id="clear-record">Clear record</button>
-    <button id="save-record">Save record as JSON file</button>
+    <button id="download-record">Download record</button>
+    <hr/>
+    <div id="status-bar"></div>
     <script src="popup.js"></script>
   </body>
 </html>
