Add basic options screen
The options screen supports a solver name, which is now also logged as
part of the record, and setting the default frequency with which we
flush events.

I removed the ability to enable/disable trackers. I don't think it makes
sense to support this, if you don't want tracking then you can just
disable the extension itself.

--- a/popup.html
+++ b/popup.html
@@ -6,15 +6,20 @@
     </style>
   </head>
   <body>
-    <div><b>Crossword Tracker</b></div>
+    <div>
+      <b>Crossword Tracker</b>
+    </div>
+    <div id="solving-as">
+    </div>
     <hr/>
-    <input type="checkbox" id="tracking-enabled"></input>
-    <label for="tracking-enabled">Enable tracking</label>
     <button id="log-record">Log record to console</button>
     <button id="store-record">Write record to Chrome storage</button>
     <button id="clear-record">Clear record</button>
     <button id="download-record">Download record</button>
     <hr/>
+    <div>
+      <a id="preferences-link" href="#">Preferences</a>
+    </div>
     <div id="status-bar"></div>
     <script src="popup.js"></script>
   </body>
