Add basic record management
You can now at least see your stored records in a table, and get a link
to the corresponding URL if it exists.

--- a/options.html
+++ b/options.html
@@ -3,7 +3,7 @@
   <head>
   </head>
   <body>
-    <h1>Preferences</h1>
+    <h1>Crossword Tracker - Preferences</h1>
     <p>
       If you update any settings, you may need to refresh pages that are already open to puzzles for the changes to take effect there.
     </p>
