--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -9,8 +9,8 @@
     <div>
       <b>Crossword Tracker</b>
     </div>
-    <div id="solving-as">
-    </div>
+    <div id="solving-as"></div>
+    <div id="event-log-level"></div>
     <hr/>
     <button id="log-record">Log record to console</button>
     <button id="store-record">Write record to Chrome storage</button>
