Add support for userAgent field
If you want, you can log the userAgent as a field in your record.

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -21,6 +21,10 @@
           <option value="full">Game, fill, square selection/highlight</option>
         </select>
       </div>
+      <div>
+        <label for="log-user-agent">Log user agent</label>
+        <input type="checkbox" id="log-user-agent"></input>
+      </div>
     </div>
     <button id="save-general">Save</button>
     <h2>Record management</h2>
