Slight wording cleanup on logging options

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -16,9 +16,9 @@
       <div>
         <label for="eventLogLevel">Log level</label>
         <select id="eventLogLevel">
-          <option value="basic">Game and fill only</option>
-          <option value="selection">Game, fill, square selection</option>
-          <option value="full">Game, fill, square selection/highlight</option>
+          <option value="basic">Basic events</option>
+          <option value="selection">Basic events + square selection</option>
+          <option value="full">Basic events + full navigation</option>
         </select>
       </div>
       <div>
