General code cleanup
The NYT code is pretty messy, start cleaning it up. Split code into
functions, don't rely on referencing script-wide state so much. Use "use
strict";.

Shift away from including common.js as a module, and towards just
expecting each page and content script to run it before running its own
main code. I couldn't get it to work with content scripts as a module.

In documentation, call out the expectations we have about the NYT DOM
more precisely.

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -46,5 +46,6 @@
     </table>
     <button id="delete-all-records">Delete all records</button>
   </body>
-  <script type="module" src="options.js"></script>
+  <script src="common.js"></script>
+  <script src="options.js"></script>
 </html>
