--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -21,6 +21,7 @@
       <a id="preferences-link" href="#">Preferences</a>
     </div>
     <div id="status-bar"></div>
-    <script type="module" src="popup.js"></script>
+    <script src="common.js"></script>
+    <script src="popup.js"></script>
   </body>
 </html>
