Log clue selection
Add an event "selectClue" that indicates that a certain clue is being
looked at closely by the solver.

This doesn't add too much to the logs, so simplify the log level
settings to just two choices: basic (no navigation) and full (with
navigation), and default to full.

Displaces the old approach of highlighting squares.

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -16,9 +16,8 @@
       <div>
         <label for="eventLogLevel">Log level</label>
         <select id="eventLogLevel">
-          <option value="basic">Basic events</option>
-          <option value="selection">Basic events + square selection</option>
-          <option value="full">Basic events + full navigation</option>
+          <option value="basic">Events only</option>
+          <option value="full">Events + navigation</option>
         </select>
       </div>
       <div>
