--- a/chrome/options.html
+++ b/chrome/options.html
@@ -1,49 +1,83 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="options.css">
   </head>
   <body>
-    <h1>Crossword Tracker - Preferences</h1>
-    <p>
-      If you update any settings, you may need to refresh pages that are already open to puzzles for the changes to take effect there.
-    </p>
-    <h2>General options</h2>
-    <div>
-      <div>
-        <label for="solverName">Your name</label>
-        <input type="text" id="solverName"></input>
+    <div class="container">
+      <h1>Crossword Tracker - Preferences</h1>
+      <p>
+        If you update any settings, you may need to refresh pages that are already open to puzzles for the changes to take effect there.
+      </p>
+      <div class="options-section">
+        <h2>General options</h2>
+        <div class="options-set">
+          <label for="solverName">Your name</label>
+          <div>
+            <input type="text" id="solverName"></input>
+          </div>
+          <div>
+            Your name. This is recorded on the log.
+          </div>
+          <label for="eventLogLevel">Log level</label>
+          <div>
+            <select id="eventLogLevel">
+              <option value="basic">Events only</option>
+              <option value="full">Events + navigation</option>
+            </select>
+          </div>
+          <div>
+            Amount of detail to log. "Events only" only captures basic game events. "Events + navigation" also captures your navigation around the grid and clues.
+          </div>
+          <label for="logUserAgent">Log user agent</label>
+          <div>
+            <input type="checkbox" id="logUserAgent"></input>
+          </div>
+          <div>
+            Whether or not to log user-agent info on the log. Changes will not take effect on a given log until you load and save it.
+          </div>
+        </div>
+        <div>
+          <button id="save-general">Save</button>
+        </div>
       </div>
-      <div>
-        <label for="eventLogLevel">Log level</label>
-        <select id="eventLogLevel">
-          <option value="basic">Events only</option>
-          <option value="full">Events + navigation</option>
-        </select>
+      <div class="options-section">
+        <h2>Site-specific settings</h2>
+        <h3>New York Times</h3>
+        <div class="options-set">
+          <label for="nyt-eventFlushFrequency">Auto-save frequency</label>
+          <div>
+            <input type="text" id="nyt-eventFlushFrequency"></input>
+          </div>
+          <div>
+            The frequency with which to auto-save event logs while solving. (Note that event logs are always saved on solve or when leaving the page anyway.) Every this-many events, we will save progress automatically. Leave blank for no auto-save.
+          </div>
+        </div>
+        <button id="save-nyt">Save</button>
       </div>
-      <div>
-        <label for="logUserAgent">Log user agent</label>
-        <input type="checkbox" id="logUserAgent"></input>
+      <div class="options-section">
+        <h2>Record management</h2>
+        <table id="record-listing">
+          <colgroup>
+            <col style="width: 30%"/>
+            <col style="width: 10%;"/>
+            <col style="width: 10%"/>
+            <col style="width: 30%"/>
+            <col style="width: 20%;"/>
+          </colgroup>
+          <thead>
+            <th>Name</th>
+            <th>Version</th>
+            <th>Status</th>
+            <th>Last event</th>
+            <th>Management</th>
+          </thead>
+          <tbody id="record-entries">
+          </tbody>
+        </table>
+        <button id="delete-all-records">Delete all records</button>
       </div>
     </div>
-    <button id="save-general">Save</button>
-    <h2>Site-specific settings</h2>
-    <h3>New York Times</h3>
-    <div>
-      <label for="nyt-eventFlushFrequency">Event flush frequency</label>
-      <input type="text" id="nyt-eventFlushFrequency"></input>
-    </div>
-    <button id="save-nyt">Save</button>
-    <h2>Record management</h2>
-    <table>
-      <thead>
-        <th>Name</th>
-        <th></th>
-        <th></th>
-      </thead>
-      <tbody id="record-entries">
-      </tbody>
-    </table>
-    <button id="delete-all-records">Delete all records</button>
   </body>
   <script src="common.js"></script>
   <script src="options.js"></script>
