Pass back error messages to popup alerting
If we get a failure on the popup actions, at least pass the error
message back into the status bar and log it so that we can see what's
going on.

--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -9,7 +9,6 @@
     </div>
     <div id="solving-as"></div>
     <div id="event-log-level"></div>
-    <hr/>
     <div id="interactions">
       <div>
         <button id="log-record">Log to console</button>
@@ -21,13 +20,12 @@
         <button id="clear-record">Clear</button>
       </div>
       <div>
-        <button id="download-record">Download</button>
+        <button id="download-record">Save as file</button>
       </div>
     </div>
     <div id="no-puzzle-message">
       No puzzle detected on this page.
     </div>
-    <hr/>
     <div>
       <a id="preferences-link" href="#">Preferences</a>
     </div>
