--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -14,13 +14,13 @@
         <button id="log-record">Log to console</button>
       </div>
       <div>
-        <button id="store-record">Put in browser storage</button>
+        <button id="cache-record">Cache</button>
       </div>
       <div>
-        <button id="clear-record">Clear</button>
+        <button id="clear-and-reset-record">Clear and reset tracking</button>
       </div>
       <div>
-        <button id="download-record">Save as file</button>
+        <button id="download-record">Save as JSON file</button>
       </div>
     </div>
     <div id="no-puzzle-message">
