Start adding puzzle SVG generation
The eventual plan is to make it a file to download, but for now it just
inserts the SVG directly into the options page.

Right now initial state and basic solve is done, but there are several
todos: clue highlighting, progress (the "complete" text and the timer),
and de-hardcoding the image parameters.

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -93,8 +93,10 @@
           </div>
         </div>
       </div>
+      <!-- <svg id="solve-animation" version="1.1" baseprofile="full" width="500" height="750" xmlns="http://www.w3.org/2000/svg"><rect width="500" height="750" fill="gray"></rect></svg> -->
     </div>
+    <script src="common.js"></script>
+    <script src="image-gen.js"></script>
+    <script src="options.js"></script>
   </body>
-  <script src="common.js"></script>
-  <script src="options.js"></script>
 </html>
