Make image options settable
Add a new "image generation options" section that sets these, fairly
straightforward.

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -46,6 +46,82 @@
         </div>
       </div>
       <div class="options-section">
+        <h2>Image generation options</h2>
+        <p>
+          All colors should be entered as <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/color_value">CSS-recognized colors</a>.
+        </p>
+        <div class="options-set" id="image-options">
+          <label for="imageWidth">Image width (px)</label>
+          <div>
+            <input type="text" id="imageWidth"></input>
+          </div>
+          <div>
+          </div>
+          <label for="imageHeight">Image height (px)</label>
+          <div>
+            <input type="text" id="imageHeight"></input>
+          </div>
+          <div>
+          </div>
+          <label for="imageMargin">Margin around the image (px)</label>
+          <div>
+            <input type="text" id="imageMargin"></input>
+          </div>
+          <div>
+          </div>
+          <label for="imageBackgroundColor">Background color</label>
+          <div>
+            <input type="text" id="imageBackgroundColor"></input>
+          </div>
+          <div>
+          </div>
+          <label for="imageGridColor">Grid line color</label>
+          <div>
+            <input type="text" id="imageGridColor"></input>
+          </div>
+          <div>
+          </div>
+          <label for="imageFillableColor">Color of fillable squares</label>
+          <div>
+            <input type="text" id="imageFillableColor"></input>
+          </div>
+          <div>
+          </div>
+          <label for="imageUnfillableColor">Color of unfillable squares</label>
+          <div>
+            <input type="text" id="imageUnfillableColor"></input>
+          </div>
+          <div>
+          </div>
+          <label for="imageSelectedColor">Color of selected square</label>
+          <div>
+            <input type="text" id="imageSelectedColor"></input>
+          </div>
+          <div>
+          </div>
+          <label for="imageHighlightedColor">Color of highlighted squares</label>
+          <div>
+            <input type="text" id="imageHighlightedColor"></input>
+          </div>
+          <div>
+          </div>
+          <label for="imageAnimationSpeed">Animation speed scaling factor</label>
+          <div>
+            <input type="text" id="imageAnimationSpeed"></input>
+          </div>
+          <div>
+            A positive number. 1.0 = real time, &gt; 1.0 = sped up, &lt; 1.0 = slowed down.
+          </div>
+        </div>
+        <div class="options-set">
+          <div>
+            <button id="image-options-save">Save</button>
+          </div>
+          <div id="image-options-save-message">
+          </div>
+        </div>
+      </div>
+      <div class="options-section">
         <h2>Site-specific settings</h2>
         <h3>New York Times</h3>
         <div class="options-set" id="nyt-options">
