Add SVG download to popup

--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -20,7 +20,10 @@
         <button id="clear-and-reset-record">Clear and reset tracking</button>
       </div>
       <div>
-        <button id="download-record">Save as JSON file</button>
+        <button id="download-record">Save JSON file</button>
+      </div>
+      <div>
+        <button id="download-svg">Save SVG</button>
       </div>
     </div>
     <div id="no-puzzle-message">
@@ -31,6 +34,7 @@
     </div>
     <div id="status-bar"></div>
     <script src="common.js"></script>
+    <script src="image-gen.js"></script>
     <script src="popup.js"></script>
   </body>
 </html>
