Add check/reveal indicators in image generation
Check and reveal events now generate little triangles in the
corresponding squares.

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -105,6 +105,18 @@
           </div>
           <div>
           </div>
+          <label for="imageCheckColor">Color of checked square indicator</label>
+          <div>
+            <input type="text" id="imageCheckColor"></input>
+          </div>
+          <div>
+          </div>
+          <label for="imageRevealColor">Color of revealed square indicator</label>
+          <div>
+            <input type="text" id="imageRevealColor"></input>
+          </div>
+          <div>
+          </div>
           <label for="imageAnimationSpeed">Animation speed scaling factor</label>
           <div>
             <input type="text" id="imageAnimationSpeed"></input>
