Sort record listing options page on initial load
Sort by reverse chronological order of last event in each log.

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -155,14 +155,17 @@
       </div>
       <div class="options-section">
         <h2>Record management</h2>
+        <p>
+          If you want to keep your records permanently, please save the JSON files somewhere permanent for yourself! Don't rely on browser storage being permanent. The JSON file can generate SVGs, but the SVG is not sufficient to generate the JSON, so if you want accurate record-keeping, make sure to get the JSON file and not just the SVG.
+        </p>
         <div class="options-set">
           <table id="record-listing">
             <colgroup>
-              <col style="width: 30%"/>
+              <col style="width: 25%"/>
               <col style="width: 10%;"/>
               <col style="width: 10%"/>
-              <col style="width: 30%"/>
-              <col style="width: 20%;"/>
+              <col style="width: 25%"/>
+              <col style="width: 30%;"/>
             </colgroup>
             <thead>
               <th>Name</th>
